patchpanel: use SocketService for TagSocket call
Target patchpanel client TagSocket call to the new SocketService. It
allows to implement a synchronous call that'll satisfy the requirements
of the PrepareSocketTag API.

BUG=b:331620358
TEST=FEATURES=test emerge-$BOARD chromeos-base/patchpanel \
  chromeos-base/patchpanel-client

Change-Id: If2d9497c6ffbeaa9444feab8d80c68c42f585431
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5596775
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Tested-by: Damien Dejean <damiendejean@google.com>
Commit-Queue: Damien Dejean <damiendejean@google.com>

--- a/patchpanel/dbus/BUILD.gn
+++ b/patchpanel/dbus/BUILD.gn
@@ -33,6 +33,13 @@ generate_dbus_proxies("patchpanel_dbus_proxies") {
   dbus_service_config = "../dbus_bindings/patchpanel-dbus-service-config.json"
 }
 
+generate_dbus_proxies("socketservice_dbus_proxies") {
+  sources = [ "../dbus_bindings/org.chromium.socketservice.xml" ]
+  proxy_output_file = "include/socketservice/dbus-proxies.h"
+  dbus_service_config =
+      "../dbus_bindings/socketservice-dbus-service-config.json"
+}
+
 shared_library("libpatchpanel-client") {
   sources = [
     "../net_util.cc",
@@ -46,12 +53,18 @@ shared_library("libpatchpanel-client") {
     all_dependent_pkg_deps = [ "protobuf-lite" ]
   }
   libs = [ "system_api" ]
-  deps = [ ":patchpanel_dbus_proxies" ]
+  deps = [
+    ":patchpanel_dbus_proxies",
+    ":socketservice_dbus_proxies",
+  ]
 }
 
 if (use.fuzzer || use.test) {
   source_set("patchpanel_client_test_support") {
-    sources = [ "mock_patchpanel_proxy.cc" ]
+    sources = [
+      "mock_patchpanel_proxy.cc",
+      "mock_socketservice_proxy.cc",
+    ]
     configs += [
       "//common-mk:test",
       ":target_defaults",
