--- a/patchpanel/dbus/org.chromium.SocketService.conf
+++ b/patchpanel/dbus/org.chromium.SocketService.conf
@@ -15,5 +15,12 @@
   <policy user="root">
     <allow send_destination="org.chromium.SocketService"/>
     <allow receive_sender="org.chromium.SocketService"/>
-   </policy>
- </busconfig>
+  </policy>
+  <policy user="shill">
+    <!-- Method used by shill to add a traffic annotation to its HTTP(s)
+         requests. -->
+    <allow send_destination="org.chromium.SocketService"
+           send_interface="org.chromium.SocketService"
+           send_member="TagSocket" />
+  </policy>
+  </busconfig>
