diagnostics: Make routine_service depend on concrete routines
The implementation of routine_service will construct concrete routines.
Update the BUILD.gn files to reflect this fact.

Also add missing dependencies.

BUG=b:335826552
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Iccc585d8a4cf05f159a32f0582b1c5e1afebc6f3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5472612
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -76,9 +76,9 @@ if (use.test) {
       "//diagnostics/cros_healthd/events:libcros_healthd_events_test",
       "//diagnostics/cros_healthd/executor/utils:test",
       "//diagnostics/cros_healthd/fetchers:libcros_healthd_fetchers_test",
+      "//diagnostics/cros_healthd/routines",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/routines:routine_test",
-      "//diagnostics/cros_healthd/routines:utils",
       "//diagnostics/cros_healthd/routines/android_network:android_network_test",
       "//diagnostics/cros_healthd/routines/audio:audio_test",
       "//diagnostics/cros_healthd/routines/battery_and_power:battery_and_power_test",
