--- a/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/memory_and_cpu/BUILD.gn
@@ -45,6 +45,7 @@ if (use.test) {
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/cros_healthd/executor/utils:test_support",
       "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
+      "//diagnostics/cros_healthd/routines",
       "//diagnostics/cros_healthd/routines:libroutine_test_utils",
       "//diagnostics/cros_healthd/system:test_support",
     ]
