--- a/diagnostics/cros_healthd/seccomp/BUILD.gn
+++ b/diagnostics/cros_healthd/seccomp/BUILD.gn
@@ -81,11 +81,14 @@ install_and_check_seccomp_policy("diagnostics_seccomp_delegate") {
     "${_arch}/floating_point-seccomp.policy",
     "${_arch}/ndt-seccomp.policy",
     "${_arch}/prime_search-seccomp.policy",
-    "${_arch}/psr-seccomp.policy",
     "${_arch}/readonly-fetchers-seccomp.policy",
     "${_arch}/touchpad_fetcher-seccomp.policy",
     "${_arch}/urandom-seccomp.policy",
   ]
+  if (_arch == "amd64") {
+    sources += [ "${_arch}/psr-seccomp.policy" ]
+  }
+
   install_path = "seccomp_policy"
 
   required_syscalls = BASE_REQUIRED_SYSCALLS + [
