mojo_service_manager: Add fake mojo service manager
Add a fake mojo service manager for test support. This is borrowed
from chromium's |ash::mojo_service_manager::FakeMojoServiceManager|.

BUG=b:335370875
TEST=works with cros-camera-diagnostics-tests

Change-Id: I264a34a4569403356def6e2dd6e33567e8cc5083
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5480928
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Imran Ziad <imranziad@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/mojo_service_manager/BUILD.gn
+++ b/mojo_service_manager/BUILD.gn
@@ -5,6 +5,7 @@
 group("all") {
   deps = [
     "//mojo_service_manager/daemon",
+    "//mojo_service_manager/fake",
     "//mojo_service_manager/init",
     "//mojo_service_manager/lib",
   ]
