privacy: Overload the insertion operator for PrivacyMetadata.
Instead of defining a new macro LOGM use the already existing macro and
overload "<<" operator. This should make migrating exising logs to this
framework much easier and intuitive. more details here:
http://shortn/_Z2BjffWFC5.

BUG=b:329272324
TEST=CQ

Change-Id: Ief51edaedb89f1158e0293067f92199c3828f9b3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5478810
Reviewed-by: Chris Mullins <crmullins@chromium.org>
Tested-by: Avan Rathod <avanrathod@google.com>
Reviewed-by: Ramya Gopalan <ramyagopalan@google.com>
Reviewed-by: Rohit Kapoor <rohkap@google.com>
Commit-Queue: Avan Rathod <avanrathod@google.com>

--- a/privacy/BUILD.gn
+++ b/privacy/BUILD.gn
@@ -4,6 +4,9 @@
 import("//common-mk/pkg_config.gni")
 group("all") {
   deps = [ ":libprivacy" ]
+  if (use.test) {
+    deps += [ ":privacy_test_runner" ]
+  }
 }
 
 pkg_config("target_defaults") {
@@ -26,4 +29,21 @@ generate_pkg_config("libprivacy_pc") {
 
   libs = [ "-lprivacy" ]
   install = true
+}
+
+if (use.test) {
+  executable("privacy_test_runner") {
+    sources = [ "log_test.cc" ]
+    configs += [
+      "//common-mk:test",
+
+      ":target_defaults",
+    ]
+    run_test = true
+
+    deps = [
+      ":libprivacy",
+      "//common-mk/testrunner",
+    ]
+  }
 }
