--- a/biod/pyproject.toml
+++ b/biod/pyproject.toml
@@ -2,6 +2,10 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+# You must directly open the biod directory in VS Code for this Python
+# configuration to automatically take effect. It will not take effect
+# if you open a parent directory or the study child directory.
+
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
 include = ["study"]
