biod: Add black and isort cfg python configs
There is no way to include the root/chromite pyproject recursively
from our own pyproject file, so we copy in the relevant settings
and hope it will be updated later.

For isort, there is no way to configure the default settings, so you
would need to manually specify the local config (symbolic link) each
time, like in the following example:

isort --sp .isort.cfg study/fpstudy.py

To figure out which formatter settings we should use, I ran
"cros format --debug study/fpstudy.py". This shows the formatter
commands being executed and their arguments.

At this time, it shows the following commands:

~/chromiumos/chromite/scripts/isort \
  --settings-file ~/chromiumos/chromite/.isort.cfg - -d

~/chromiumos/chromite/scripts/black \
  --config=~/chromiumos/chromite/pyproject.toml \
  --stdin-filename=study/fpstudy.py -

Although black will acknowledge our pyproject.toml file, isort will
not. Running the following shows that isort, by default, will only
looks for the ".isort.cfg" at the script location, which is in
depot_tools.

strace -f -e trace=%file \
  isort study/fpstudy.py |& grep "biod\|\.isort\.cfg"

BUG=None
TEST=pushd ~/chromiumos/src/platform2/biod
     strace -e trace=%file black --verbose |& grep pyproject
     # Ensure we see that it opened our biod/pyproject.toml file
TEST=# Add "verbose = true" to black config.
     black
     # Ensure it printed verbose info.
TEST=# Rearrange the imports in fpstudy.py
     isort --settings-file=./.isort.cfg --verbose study/fpstudy.py
     # Make sure it fixes them
TEST=strace -e trace=%file isort --settings-file=./.isort.cfg \
       --verbose study/fpstudy.py |&grep "\.isort\.cfg"
     # Make sure it opens our symbolic link to the isort cfg.

Change-Id: Ia6f8c36bc62f60a76a1c15ed6abe564f3930081c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5479869
Commit-Queue: Craig Hesling <hesling@chromium.org>
Reviewed-by: Tom Hughes <tomhughes@chromium.org>

--- a/biod/pyproject.toml
+++ b/biod/pyproject.toml
@@ -17,3 +17,9 @@ typeCheckingMode = "strict"
 # Please run ./study/python-venv-setup.sh to create this virtual environment.
 venvPath = "study"
 venv = ".venv"
+
+[tool.black]
+# Copied from ~/chromiumos/chromite/pyproject.toml, since we can't include that
+# config file from within our own.
+line-length = 80
+target-version = ['py38']
