diagnostics: Use underscores in GN target names
According to GN style guide, targets and configs should be named using
lowercase with underscores separating words.

BUG=b:328015642
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: Ia1ca9024d8b8ff6ddeab4d18f83b7945b4fa5806
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5481447
Reviewed-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/BUILD.gn
+++ b/diagnostics/BUILD.gn
@@ -7,7 +7,7 @@ group("all") {
     ":install_init_config",
     ":install_service_manager_policy_config",
     ":install_tmpfiles_config",
-    "//diagnostics/cros_health_tool:cros-health-tool",
+    "//diagnostics/cros_health_tool",
     "//diagnostics/cros_healthd:cros_healthd",
     "//diagnostics/cros_healthd/delegate",
     "//diagnostics/cros_healthd/seccomp",
