diagnostics: Fix gn check errors
Fix errors caught by `gn gen --check`.

BUG=b:335826552
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I2e4b91d416569274035fefb0ee3825788aa802fb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5481448
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Byron Lee <byronlee@chromium.org>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_health_tool/BUILD.gn
+++ b/diagnostics/cros_health_tool/BUILD.gn
@@ -23,6 +23,8 @@ executable("cros_health_tool") {
     "diag:libdiag",
     "event:libevent",
     "telem:libtelem",
+    "//diagnostics/mojom/external:libnetwork_health_mojo_bindings",
+    "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
   install_path = "bin"
 }
