--- a/diagnostics/cros_health_tool/event/BUILD.gn
+++ b/diagnostics/cros_health_tool/event/BUILD.gn
@@ -11,5 +11,8 @@ source_set("libevent") {
     "network_subscriber.cc",
   ]
   configs += [ "//diagnostics/cros_health_tool:cros_health_tool_pkg_deps" ]
-  deps = [ "//diagnostics/mojom/public:libcros_healthd_mojo_bindings" ]
+  deps = [
+    "//diagnostics/mojom/external:libnetwork_health_mojo_bindings",
+    "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
+  ]
 }
