--- a/diagnostics/cros_healthd/routines/network/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/network/BUILD.gn
@@ -23,7 +23,10 @@ source_set("network") {
     "video_conferencing.cc",
   ]
   configs += [ ":network_pkg_config" ]
-  public_deps = [ "//diagnostics/cros_healthd/routines:utils" ]
+  public_deps = [
+    "//diagnostics/cros_healthd/mojom",
+    "//diagnostics/cros_healthd/routines:utils",
+  ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/system",
