--- a/diagnostics/cros_healthd/fetchers/storage/BUILD.gn
+++ b/diagnostics/cros_healthd/fetchers/storage/BUILD.gn
@@ -15,10 +15,10 @@ pkg_config("storage_data_source_common_pkg_deps") {
 
 source_set("storage_data_source") {
   configs += [ ":storage_data_source_common_pkg_deps" ]
+  public_deps = [ "//diagnostics/mojom/public:libcros_healthd_mojo_bindings" ]
   deps = [
     "//diagnostics/base",
     "//diagnostics/cros_healthd/utils",
-    "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
   libs = [
     "mount",
