--- a/diagnostics/mojom/public/BUILD.gn
+++ b/diagnostics/mojom/public/BUILD.gn
@@ -8,12 +8,12 @@ import("//common-mk/pkg_config.gni")
 generate_mojom_bindings("libcros_healthd_mojo_bindings") {
   mojo_root = "${platform2_root}"
   install_package = "cros_healthd-client"
+  public_deps = [ "//diagnostics/mojom/external:libpublic_dependencies" ]
   deps = [
     "//diagnostics/mojom/external:libcros_healthd_internal",
     "//diagnostics/mojom/external:libmojo_base",
     "//diagnostics/mojom/external:libnetwork_diagnostics_mojo_bindings",
     "//diagnostics/mojom/external:libnetwork_health_mojo_bindings",
-    "//diagnostics/mojom/external:libpublic_dependencies",
   ]
   sources = [
     "cros_healthd.mojom",
