diagnostics: Move SensorDetail to a new file
Make this struct a standalone file so that routine V2 can use it.

BUG=b:329377632
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I84a1b24bc8a3bdcc91045ce4591065c1b3e9ef2e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5479412
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/routines/sensor/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/sensor/BUILD.gn
@@ -5,6 +5,7 @@
 source_set("sensor") {
   sources = [
     "sensitive_sensor.cc",
+    "sensor_detail.cc",
     "sensor_existence_checker.cc",
   ]
   public_pkg_deps = [
@@ -26,6 +27,7 @@ if (use.test) {
   source_set("sensor_test") {
     sources = [
       "sensitive_sensor_test.cc",
+      "sensor_detail_test.cc",
       "sensor_existence_checker_test.cc",
     ]
     pkg_deps = [
