diagnostics: Add futex to the required syscall for executor-delegate
To fix seccomp violation.

BUG=b:337196702
TEST=CQ

Change-Id: I1829e496a3dfe40f319407a0149f99423f161229
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5493601
Reviewed-by: Ethan Cheng <yycheng@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/seccomp/BUILD.gn
+++ b/diagnostics/cros_healthd/seccomp/BUILD.gn
@@ -100,6 +100,12 @@ install_and_check_seccomp_policy("diagnostics_seccomp_delegate") {
                         "connect",
                         "socket: arg0 == AF_UNIX",
                       ]
+  if (_arch == "arm") {
+    required_syscalls += [
+      # `futex` is used in `libc_start_call_main`.
+      "futex",
+    ]
+  }
   if (_arch == "arm64") {
     required_syscalls += [ "process_vm_readv" ]
   }
