flex_hwis: fix minijail and seccomp configs for flex_device_metrics
Add access syscall to seccomp configuration.
Add /sys/firmware to minijail mount configuration.

BUG=b:330890274
TEST=cros_workon start flex_hwis
TEST=FEATURES=test emerge-reven chromeos-base/flex_hwis
TEST=Deploy to dut, start flex_device_metrics
TEST=Verify new histogram is in chrome://histograms

Change-Id: Iaef66282bc92055d2ab98cc93d8b80401822a99c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5490991
Auto-Submit: Justin Ouellette <justinoue@google.com>
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>
Tested-by: Nicholas Bishop <nicholasbishop@google.com>
Tested-by: Justin Ouellette <justinoue@google.com>
Reviewed-by: Nicholas Bishop <nicholasbishop@google.com>

--- a/flex_hwis/minijail/flex_device_metrics.conf
+++ b/flex_hwis/minijail/flex_device_metrics.conf
@@ -30,9 +30,10 @@ mount = /sys,/sys,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
 mount = /var,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M
 # Allow access to /dev for rootdev.
 bind-mount = /dev
-# Allow access to parts of /sys for rootdev and partition info.
+# Allow access to parts of /sys for rootdev, partition, and firmware info.
 bind-mount = /sys/block
 bind-mount = /sys/class/block
 bind-mount = /sys/devices
+bind-mount = /sys/firmware
 # Allow UMA metrics.
 bind-mount = /var/lib/metrics,,1
