device_management: Use libstorage::Platform
Since Platform object has been extracted from cryptohome into
libstorage, no need to duplicate it anymore.

BUG=b:271826562, b:232167376
TEST=Unit tests, CQ.

Cq-Depend: chromium:5497089
Change-Id: I8c1a1713accd3841827df79f9229451892513682
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5497575
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>

--- a/device_management/BUILD.gn
+++ b/device_management/BUILD.gn
@@ -72,6 +72,7 @@ pkg_config("target_defaults") {
     # This is a list of pkg-config dependencies
     "libbrillo",
     "libchrome",
+    "libstorage_platform",
   ]
   libs = [
     "hwsec",
@@ -93,7 +94,6 @@ source_set("device_management_server_library") {
     "fwmp/firmware_management_parameters.cc",
     "install_attributes/install_attributes.cc",
     "install_attributes/lockbox.cc",
-    "install_attributes/platform.cc",
   ]
   configs += [
     ":target_defaults",
@@ -179,6 +179,7 @@ if (use.test) {
       "libbrillo-test",
       "libchrome-test",
       "libmetrics",
+      "libstorage_fake_platform",
     ]
   }
   executable("device_management_testrunner") {
@@ -186,11 +187,9 @@ if (use.test) {
       "device_management_service_test.cc",
       "device_management_testrunner.cc",
       "fwmp/firmware_management_parameters_test.cc",
-      "install_attributes/fake_platform.cc",
       "install_attributes/install_attributes_test.cc",
       "install_attributes/lockbox_test.cc",
       "install_attributes/mock_lockbox.cc",
-      "install_attributes/mock_platform.cc",
       "metrics.cc",
     ]
     libs = [
