--- a/runtime_probe/sandbox/BUILD.gn
+++ b/runtime_probe/sandbox/BUILD.gn
@@ -32,7 +32,6 @@ install_seccomp_policy("install_sandbox_seccomp") {
   if (_arch == "amd64") {
     sources += [
       "${_arch}/ap_i2c-seccomp.policy",
-      "${_arch}/ec_i2c-seccomp.policy",
       "${_arch}/gpu-seccomp.policy",
       "${_arch}/memory-seccomp.policy",
       "${_arch}/ufs_storage-seccomp.policy",
@@ -47,7 +46,10 @@ install_seccomp_policy("install_sandbox_seccomp") {
     ]
   }
   if (_arch == "amd64" || _arch == "arm64") {
-    sources += [ "${_arch}/ec_component-seccomp.policy" ]
+    sources += [
+      "${_arch}/ec_component-seccomp.policy",
+      "${_arch}/ec_i2c-seccomp.policy",
+    ]
   }
   install_path = "/etc/runtime_probe/sandbox"
 }
