vtpm: Replace the TpmManagerUtility
The TpmManagerUtility had been deprecated, we should replace it with the
D-Bus binding.

BUG=b:313547077
TEST=CQ

Change-Id: Ie5acafd40c429e1cb5a8c52fe1069c62f656d0a2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5500300
Commit-Queue: Ching-Kang Yen <chingkang@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>
Tested-by: Ching-Kang Yen <chingkang@chromium.org>

--- a/vtpm/BUILD.gn
+++ b/vtpm/BUILD.gn
@@ -28,6 +28,7 @@ pkg_config("target_defaults") {
     "libattestation-client",
     "libbrillo",
     "libchrome",
+    "libtpm_manager-client",
     "protobuf",
     "system_api",
   ]
@@ -187,7 +188,10 @@ if (use.test) {
       "commands/virtualizer_test.cc",
       "vtpm_service_test.cc",
     ]
-    pkg_deps = [ "libattestation-client-test" ]
+    pkg_deps = [
+      "libattestation-client-test",
+      "libtpm_manager-client-test",
+    ]
     configs += [
       "//common-mk:test",
       ":target_defaults",
