sepolicy: allow chronos to r/w /run/early-metrics
As we introduce a new directory under /run/early-metrics/,
it will need to be given r/w permissions, so that Chrome will be able
to delete the files after processing it's metrics.

Design: go/crash-reporter-dropping-early-uma-metrics

BUG=b:330641099
TEST=cros deploy; verify metrics are read, processed, deleted by chrome.

Cq-Depend: chromium:5507086, chromium:5485758
Change-Id: Icec941c4bdb2763f56ffea7020ddde67401706fe
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5500946
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Hirthanan Subenderan <hirthanan@google.com>
Tested-by: Hirthanan Subenderan <hirthanan@google.com>
Reviewed-by: Allen Webb <allenwebb@google.com>

--- a/metrics/tmpfiles.d/metrics_daemon_dirs.conf
+++ b/metrics/tmpfiles.d/metrics_daemon_dirs.conf
@@ -9,3 +9,4 @@
 d= /var/lib/metrics 0755 metrics metrics
 d= /var/log/vmlog 0755 metrics metrics
 d= /var/lib/metrics/uma-events.d 2777 chronos chronos
+d= /run/early-metrics 4700 chronos chronos
