--- a/dlcservice/org.chromium.DlcService.conf
+++ b/dlcservice/org.chromium.DlcService.conf
@@ -39,6 +39,9 @@
     <allow send_destination="org.chromium.DlcService"
       send_interface="org.chromium.DlcServiceInterface"
       send_member="GetDlcState" />
+    <allow send_destination="org.chromium.DlcService"
+      send_interface="org.chromium.DlcServiceInterface"
+      send_member="GetInstalled2" />
   </policy>
   <policy user="root">
     <allow receive_sender="org.chromium.DlcService" />
