--- a/debugd/BUILD.gn
+++ b/debugd/BUILD.gn
@@ -465,6 +465,7 @@ if (use.test) {
       "src/helper_utils_test.cc",
       "src/helpers/audit_log_utils.cc",
       "src/helpers/audit_log_utils_test.cc",
+      "src/helpers/capture_utility_test.cc",
       "src/helpers/cups_uri_helper_test.cc",
       "src/helpers/cups_uri_helper_utils.cc",
       "src/helpers/dev_features_password_utils.cc",
