mini_udisks: Update owner for uefi_capsule_updates
The capsules will be written by fwupd, so it needs write access to the
directory.

BUG=b:328780545
TEST=cros_workon start chromeos-base/mini_udisks
TEST=emerge-reven chromeos-base/mini_udisks

Change-Id: Icd2cbbb60341d4046fbeca36213ff12fcc84af93
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5502936
Commit-Queue: Nicholas Bishop <nicholasbishop@google.com>
Commit-Queue: Jeffery Miller <jefferymiller@google.com>
Auto-Submit: Nicholas Bishop <nicholasbishop@google.com>
Tested-by: Nicholas Bishop <nicholasbishop@google.com>
Reviewed-by: Jeffery Miller <jefferymiller@google.com>

--- a/mini_udisks/tmpfiles.d/mini_udisks.conf
+++ b/mini_udisks/tmpfiles.d/mini_udisks.conf
@@ -3,4 +3,4 @@
 # found in the LICENSE file.
 
 # This directory is where UEFI capsule updates will be written by fwupd.
-d= /mnt/stateful_partition/unencrypted/uefi_capsule_updates 0755 mini_udisks mini_udisks
+d= /mnt/stateful_partition/unencrypted/uefi_capsule_updates 0755 fwupd fwupd
